--- a/index.html
+++ b/index.html
@@ -4,29 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mario Jump</title>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    
 </head>
 <body>
-    <div class="main-login">
-        <div class="left-login">
-            <h1>Faça login<br>E entre para o nosso time</h1>
-            <img src="guitar.svg" class="left-login-image" alt="guitarrista animação">
-        </div>
-        <div class="right-login">
-            <div class="card-login">
-                <h1>LOGIN</h1>
-                <div class="textfield">
-                    <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
-                </div>
-                <div class="textfield">
-                    <label for="senha">Senha</label>
-                    <input type="password" name="usuario" placeholder="Senha">
-                </div>
-                <button class="btn-login">Login</button>
-            </div>
-        </div>
+    <div class="game-board">
+
+        <img src="clouds.png" class="clouds">
+        <img src="ainda.gif.gif" class="mario ">
+        <img src="pipe.png" class="pipe">
+
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
